# openclaw-embodied

./: .gitmodules  CONST.py  DEMO.md  Dockerfile  HEARTBEAT.md  KIBUB_IP  MEMORY.md  OPERATOR_README.md  README.md  SETUP.md  SOUL.md  TOOLS.md  USER.md  build.sh  docker-dev.sh  quickstart.sh  run-agent.sh
.openclaw/: workspace-state.json
install/: setup.ps1  setup.sh
log/: latest_build
monitor/: package.xml  setup.py
monitor/openclaw_monitor/: __init__.py  confidence.py  monitor_node.py
openclaw/: action_node.py  agent.py  const.py  node.py  openclaw.launch.py  package.xml  setup.py  status_node.py
openclaw/openclaw/: __init__.py  agent.py  prompts.py  ros_bridge.py  skill_loader.py
openclaw_msgs/: CMakeLists.txt
robot-client/: groot_prompt.json
robot-client/scripts/: deploy_groot_prompt.sh  deploy_policy_server.sh  kill_robot_client.sh  robot_status_snapshot.sh
skills/: deploy_groot_prompt.sh  facial_recognition.yaml  get_robot_status.sh  groot_prompt.json  pick_up_cup.yaml  search_for_object.yaml
skills/diff-drive/: SKILL.md  diff-drive.sh  diff-driver.py
skills/evaluate-status/: SKILL.md
skills/hello-world/: SKILL.md
skills/identify-face/: SKILL.md
skills/identify-face/scripts/: detect.py  setup_known_faces.py  setup_known_faces.sh
skills/knock-on-wood/: SKILL.md
skills/neck-servos/: SKILL.md
skills/neck-servos/scripts/: TODO.md  servo-controller.sh  todo.txt
skills/pick-up-cup/: SKILL.md
skills/press-red-button/: SKILL.md
skills/robot-client/: groot_prompt.json
skills/stack-cup/: SKILL.md
(+50 files in other folders)
