<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openclaw</name>
  <version>0.1.0</version>
  <description>OpenClaw: LLM-based robotic manipulation planner with skill composition and real-time monitoring.</description>
  <maintainer email="dev@example.com">OpenClaw Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/your-org/openclaw-embodied</url>
  <url type="bugtracker">https://github.com/your-org/openclaw-embodied/issues</url>

  <author email="dev@example.com">OpenClaw Team</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
